--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -211,15 +211,17 @@
           <div class="col-lg-3 col-md-4">
             <div class="icon-box">
               <i class="ri-store-line" style="color: #ffbb2c;"></i>
-              <h3><a href="">Lorem Ipsum</a></h3>
-            </div>
+              <h3><a href="./1_test.html">Welcome</a></h3>
+            </div>  
           </div>
+
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
-              <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-              <h3><a href="">Dolor Sitema</a></h3>
+              <i class="fa-light fa-microchip"></i>
+              <h3><a href="#">icon font </a></h3>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
@@ -280,6 +282,7 @@
               <h3><a href="">Flavor Nivelanda</a></h3>
             </div>
           </div>
+
         </div>
 
       </div>
